examples/test/testpolicy9388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9388
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key47: value27
      key13: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value46
          key36: value21
      podSelector:
        matchLabels:
          key34: value21
